<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Title">Technical Calculator</string>
    <string name="Subtitle">Tech Calc</string>
    <string name="title_activity_activity1">Activity1</string>
    <string name="Number7">7</string>
    <string name="Number8">8</string>
    <string name="Number9">9</string>
    <string name="UserDisplay"/>
    <string name="Number6">6</string>
    <string name="Number5">5</string>
    <string name="Number4">4</string>
    <string name="Number3">3</string>
    <string name="Number2">2</string>
    <string name="Number1">1</string>
    <string name="Multiply">X</string>
    <string name="Divide">/</string>
    <string name="Add">+</string>
    <string name="Bracket">(  )</string>
    <string name="Number0">0</string>
    <string name="Dot">.</string>
    <string name="Sub">-</string>
    <string name="Delete">DEL</string>
    <string name="Advanced">Advanced Feature</string>
    <string name="Percent">%</string>
    <string name="Power">^</string>
    

</resources>
